src/main/java/com/howtodoinjava/parse/FOSchemeParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 FOScheme.g 2017-03-31 00:00:37
package com.howtodoinjava.parse;

import com.howtodoinjava.entity.Predicado;
import com.howtodoinjava.entity.PredicadoId;
import com.howtodoinjava.lambdacalculo.*;
import com.howtodoinjava.service.PredicadoManager;
import java.util.Iterator;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class FOSchemeParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CAPITALLETTER", "LETTER", "WORD", "INITIALDIGIT", "DIGIT", "NUMBER", "WHITESPACE", "'=='", "'\\\\equiv'", "'==>'", "'\\\\Rightarrow'", "'<=='", "'\\\\Leftarrow'", "'\\\\/'", "'\\\\vee'", "'/\\\\'", "'\\\\wedge'", "'!=='", "'\\\\nequiv'", "'!'", "'\\\\neg'", "'true'", "'false'", "'('", "'forall'", "'|'", "':'", "')'", "'exists'", "'['", "':='", "']'", "','", "'lambda'", "'.'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=5;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int NUMBER=9;
    public static final int CAPITALLETTER=4;
    public static final int INITIALDIGIT=7;
    public static final int WHITESPACE=10;
    public static final int EOF=-1;
    public static final int WORD=6;
    public static final int T__30=30;
    public static final int T__19=19;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__16=16;
    public static final int T__34=34;
    public static final int T__15=15;
    public static final int T__35=35;
    public static final int T__18=18;
    public static final int T__36=36;
    public static final int T__17=17;
    public static final int T__37=37;
    public static final int T__12=12;
    public static final int T__38=38;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int DIGIT=8;

    // delegates
    // delegators


        public FOSchemeParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FOSchemeParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return FOSchemeParser.tokenNames; }
    public String getGrammarFileName() { return "FOScheme.g"; }



    // $ANTLR start "start_rule"
    // FOScheme.g:12:1: start_rule[PredicadoId predicadoid, PredicadoManager predicadoManager] returns [Term value] : eq ;
    public final Term start_rule(PredicadoId predicadoid, PredicadoManager predicadoManager) throws RecognitionException {
        Term value = null;

        Term eq1 = null;


        try {
            // FOScheme.g:12:93: ( eq )
            // FOScheme.g:12:95: eq
            {
            pushFollow(FOLLOW_eq_in_start_rule21);
            eq1=eq();

            state._fsp--;

             value =eq1;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "start_rule"


    // $ANTLR start "eq"
    // FOScheme.g:14:1: eq returns [Term value] : term eqtail ;
    public final Term eq() throws RecognitionException {
        Term value = null;

        Term term2 = null;

        ArrayList<Term> eqtail3 = null;


        try {
            // FOScheme.g:14:24: ( term eqtail )
            // FOScheme.g:14:26: term eqtail
            {
            pushFollow(FOLLOW_term_in_eq44);
            term2=term();

            state._fsp--;

            pushFollow(FOLLOW_eqtail_in_eq46);
            eqtail3=eqtail();

            state._fsp--;

             Term aux=term2;
                                                            for(Iterator<Term> i = eqtail3.iterator(); i.hasNext();) 
                                                               aux=new App(new App(new Const("\\equiv "),i.next()),aux);
                                                            value =aux;
                                                          

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "eq"


    // $ANTLR start "eqtail"
    // FOScheme.g:20:1: eqtail returns [ArrayList<Term> value] : ( ( '==' | '\\\\equiv' ) term tail1= eqtail | );
    public final ArrayList<Term> eqtail() throws RecognitionException {
        ArrayList<Term> value = null;

        ArrayList<Term> tail1 = null;

        Term term4 = null;


        try {
            // FOScheme.g:20:39: ( ( '==' | '\\\\equiv' ) term tail1= eqtail | )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0>=11 && LA1_0<=12)) ) {
                alt1=1;
            }
            else if ( (LA1_0==EOF||(LA1_0>=30 && LA1_0<=31)||LA1_0==36) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // FOScheme.g:21:5: ( '==' | '\\\\equiv' ) term tail1= eqtail
                    {
                    if ( (input.LA(1)>=11 && input.LA(1)<=12) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_term_in_eqtail83);
                    term4=term();

                    state._fsp--;

                    pushFollow(FOLLOW_eqtail_in_eqtail87);
                    tail1=eqtail();

                    state._fsp--;

                    ArrayList<Term> aux=tail1; aux.add(0,term4); value =aux;

                    }
                    break;
                case 2 :
                    // FOScheme.g:23:47: 
                    {
                    value =new ArrayList<Term>();

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "eqtail"


    // $ANTLR start "term"
    // FOScheme.g:25:1: term returns [Term value] : disyconj disyconjtail ;
    public final Term term() throws RecognitionException {
        Term value = null;

        Term disyconjtail5 = null;

        Term disyconj6 = null;


        try {
            // FOScheme.g:25:26: ( disyconj disyconjtail )
            // FOScheme.g:25:28: disyconj disyconjtail
            {
            pushFollow(FOLLOW_disyconj_in_term155);
            disyconj6=disyconj();

            state._fsp--;

            pushFollow(FOLLOW_disyconjtail_in_term157);
            disyconjtail5=disyconjtail();

            state._fsp--;

             
                                                                if (disyconjtail5 == null)
                                                                   value = disyconj6;
                                                                else
                                                                   value = new App(disyconjtail5,disyconj6);
                                                              

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "term"


    // $ANTLR start "disyconjtail"
    // FOScheme.g:32:1: disyconjtail returns [Term value] : ( ( '==>' | '\\\\Rightarrow' ) disyconj tail2= disyconjtail | );
    public final Term disyconjtail() throws RecognitionException {
        Term value = null;

        Term tail2 = null;

        Term disyconj7 = null;


        try {
            // FOScheme.g:32:34: ( ( '==>' | '\\\\Rightarrow' ) disyconj tail2= disyconjtail | )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=13 && LA2_0<=14)) ) {
                alt2=1;
            }
            else if ( (LA2_0==EOF||(LA2_0>=11 && LA2_0<=12)||(LA2_0>=30 && LA2_0<=31)||LA2_0==36) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // FOScheme.g:34:6: ( '==>' | '\\\\Rightarrow' ) disyconj tail2= disyconjtail
                    {
                    if ( (input.LA(1)>=13 && input.LA(1)<=14) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_disyconj_in_disyconjtail186);
                    disyconj7=disyconj();

                    state._fsp--;

                    pushFollow(FOLLOW_disyconjtail_in_disyconjtail190);
                    tail2=disyconjtail();

                    state._fsp--;


                                                                   if (tail2 == null)
                                                                      value = new App(new Const("\\Rightarrow "),disyconj7);
                                                                   else
                                                                   value =new App(new Const("\\Rightarrow "),new App(tail2,disyconj7));
                                                                  

                    }
                    break;
                case 2 :
                    // FOScheme.g:41:47: 
                    {
                    value =null;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "disyconjtail"


    // $ANTLR start "disyconj"
    // FOScheme.g:43:1: disyconj returns [Term value] : conc conctail ;
    public final Term disyconj() throws RecognitionException {
        Term value = null;

        Term conc8 = null;

        ArrayList<Term> conctail9 = null;


        try {
            // FOScheme.g:43:30: ( conc conctail )
            // FOScheme.g:43:32: conc conctail
            {
            pushFollow(FOLLOW_conc_in_disyconj251);
            conc8=conc();

            state._fsp--;

            pushFollow(FOLLOW_conctail_in_disyconj253);
            conctail9=conctail();

            state._fsp--;

             Term aux=conc8;
                                                            for(Iterator<Term> i = conctail9.iterator(); i.hasNext();) 
                                                               aux=new App(new App(new Const("\\Leftarrow "),i.next()),aux);
                                                            value =aux;
                                                          

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "disyconj"


    // $ANTLR start "conctail"
    // FOScheme.g:49:1: conctail returns [ArrayList<Term> value] : ( ( '<==' | '\\\\Leftarrow' ) conc tail3= conctail | );
    public final ArrayList<Term> conctail() throws RecognitionException {
        ArrayList<Term> value = null;

        ArrayList<Term> tail3 = null;

        Term conc10 = null;


        try {
            // FOScheme.g:49:41: ( ( '<==' | '\\\\Leftarrow' ) conc tail3= conctail | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=15 && LA3_0<=16)) ) {
                alt3=1;
            }
            else if ( (LA3_0==EOF||(LA3_0>=11 && LA3_0<=14)||(LA3_0>=30 && LA3_0<=31)||LA3_0==36) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // FOScheme.g:51:5: ( '<==' | '\\\\Leftarrow' ) conc tail3= conctail
                    {
                    if ( (input.LA(1)>=15 && input.LA(1)<=16) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_conc_in_conctail279);
                    conc10=conc();

                    state._fsp--;

                    pushFollow(FOLLOW_conctail_in_conctail283);
                    tail3=conctail();

                    state._fsp--;

                    ArrayList<Term> aux=tail3; 
                                                                   aux.add(0,conc10); value =aux;
                                                                  

                    }
                    break;
                case 2 :
                    // FOScheme.g:55:47: 
                    {
                    value =new ArrayList<Term>();

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "conctail"


    // $ANTLR start "conc"
    // FOScheme.g:57:1: conc returns [Term value] : neq disytail ;
    public final Term conc() throws RecognitionException {
        Term value = null;

        Term neq11 = null;

        ArrayList<ParserPair> disytail12 = null;


        try {
            // FOScheme.g:57:26: ( neq disytail )
            // FOScheme.g:57:28: neq disytail
            {
            pushFollow(FOLLOW_neq_in_conc344);
            neq11=neq();

            state._fsp--;

            pushFollow(FOLLOW_disytail_in_conc346);
            disytail12=disytail();

            state._fsp--;

             Term aux=neq11; 
                                                                 for(Iterator<ParserPair> i = disytail12.iterator(); i.hasNext();)
                                                                 {
                                                                    ParserPair pair = i.next();
                                                                    if (pair.symbol.equals("\\vee "))
                                                                       aux=new App(new App(new Const(pair.symbol),pair.term),aux); 
                                                                    else if (pair.symbol.equals("\\wedge "))
                                                                       aux=new App(new App(new Const(pair.symbol),pair.term),aux); 
                                                                 }
                                                                 value =aux;
                                                               

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "conc"


    // $ANTLR start "disytail"
    // FOScheme.g:69:1: disytail returns [ArrayList<ParserPair> value] : ( ( '\\\\/' | '\\\\vee' ) neq tail4= disytail | ( '/\\\\' | '\\\\wedge' ) neq tail5= disytail | );
    public final ArrayList<ParserPair> disytail() throws RecognitionException {
        ArrayList<ParserPair> value = null;

        ArrayList<ParserPair> tail4 = null;

        ArrayList<ParserPair> tail5 = null;

        Term neq13 = null;

        Term neq14 = null;


        try {
            // FOScheme.g:69:47: ( ( '\\\\/' | '\\\\vee' ) neq tail4= disytail | ( '/\\\\' | '\\\\wedge' ) neq tail5= disytail | )
            int alt4=3;
            switch ( input.LA(1) ) {
            case 17:
            case 18:
                {
                alt4=1;
                }
                break;
            case 19:
            case 20:
                {
                alt4=2;
                }
                break;
            case EOF:
            case 11:
            case 12:
            case 13:
            case 14:
            case 15:
            case 16:
            case 30:
            case 31:
            case 36:
                {
                alt4=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            
            switch (alt4) {
                case 1 :
                    // FOScheme.g:71:6: ( '\\\\/' | '\\\\vee' ) neq tail4= disytail
                    {
                    if ( (input.LA(1)>=17 && input.LA(1)<=18) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_neq_in_disytail384);
                    neq13=neq();

                    state._fsp--;

                    pushFollow(FOLLOW_disytail_in_disytail388);
                    tail4=disytail();

                    state._fsp--;

                    ArrayList<ParserPair> aux=tail4;
                                                                   aux.add(0,new ParserPair("\\vee ",neq13)); value =aux;
                                                                  

                    }
                    break;
                case 2 :
                    // FOScheme.g:75:6: ( '/\\\\' | '\\\\wedge' ) neq tail5= disytail
                    {
                    if ( (input.LA(1)>=19 && input.LA(1)<=20) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_neq_in_disytail410);
                    neq14=neq();

                    state._fsp--;

                    pushFollow(FOLLOW_disytail_in_disytail414);
                    tail5=disytail();

                    state._fsp--;

                    ArrayList<ParserPair> aux=tail5; 
                                                                   aux.add(0,new ParserPair("\\wedge ",neq14)); value =aux;
                                                                  

                    }
                    break;
                case 3 :
                    // FOScheme.g:79:47: 
                    {
                    value =new ArrayList<ParserPair>();

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "disytail"


    // $ANTLR start "neq"
    // FOScheme.g:81:1: neq returns [Term value] : neg neqtail ;
    public final Term neq() throws RecognitionException {
        Term value = null;

        Term neg15 = null;

        ArrayList<Term> neqtail16 = null;


        try {
            // FOScheme.g:81:25: ( neg neqtail )
            // FOScheme.g:81:27: neg neqtail
            {
            pushFollow(FOLLOW_neg_in_neq479);
            neg15=neg();

            state._fsp--;

            pushFollow(FOLLOW_neqtail_in_neq481);
            neqtail16=neqtail();

            state._fsp--;

             Term aux=neg15;
                                                            for(Iterator<Term> i = neqtail16.iterator(); i.hasNext();) 
                                                               aux=new App(new App(new Const("\\nequiv "),i.next()),aux);
                                                            value =aux;
                                                          

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "neq"


    // $ANTLR start "neqtail"
    // FOScheme.g:87:1: neqtail returns [ArrayList<Term> value] : ( ( '!==' | '\\\\nequiv' ) neg tail6= neqtail | );
    public final ArrayList<Term> neqtail() throws RecognitionException {
        ArrayList<Term> value = null;

        ArrayList<Term> tail6 = null;

        Term neg17 = null;


        try {
            // FOScheme.g:87:40: ( ( '!==' | '\\\\nequiv' ) neg tail6= neqtail | )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=21 && LA5_0<=22)) ) {
                alt5=1;
            }
            else if ( (LA5_0==EOF||(LA5_0>=11 && LA5_0<=20)||(LA5_0>=30 && LA5_0<=31)||LA5_0==36) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // FOScheme.g:89:5: ( '!==' | '\\\\nequiv' ) neg tail6= neqtail
                    {
                    if ( (input.LA(1)>=21 && input.LA(1)<=22) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_neg_in_neqtail514);
                    neg17=neg();

                    state._fsp--;

                    pushFollow(FOLLOW_neqtail_in_neqtail518);
                    tail6=neqtail();

                    state._fsp--;

                    ArrayList<Term> aux=tail6; 
                                                                   aux.add(0,neg17); value =aux;
                                                                  

                    }
                    break;
                case 2 :
                    // FOScheme.g:93:47: 
                    {
                    value =new ArrayList<Term>();

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "neqtail"


    // $ANTLR start "neg"
    // FOScheme.g:95:1: neg returns [Term value] : ( ( '!' | '\\\\neg' ) n= neg | CAPITALLETTER sust | 'true' sust | 'false' sust | '(' 'forall' LETTER '|' ':' b1= eq ')' sust | '(' 'forall' LETTER '|' ran1= eq ':' b1= eq ')' sust | '(' 'exists' LETTER '|' ':' b2= eq ')' sust | '(' 'exists' LETTER '|' ran2= eq ':' b2= eq ')' sust | WORD '(' arguments ')' sust | '(' eq ')' sust );
    public final Term neg() throws RecognitionException {
        Term value = null;

        Token CAPITALLETTER18=null;
        Token LETTER22=null;
        Token LETTER24=null;
        Token LETTER26=null;
        Token LETTER28=null;
        Token WORD30=null;
        Term n = null;

        Term b1 = null;

        Term ran1 = null;

        Term b2 = null;

        Term ran2 = null;

        ArrayList<Sust> sust19 = null;

        ArrayList<Sust> sust20 = null;

        ArrayList<Sust> sust21 = null;

        ArrayList<Sust> sust23 = null;

        ArrayList<Sust> sust25 = null;

        ArrayList<Sust> sust27 = null;

        ArrayList<Sust> sust29 = null;

        ArrayList<Var> arguments31 = null;

        ArrayList<Sust> sust32 = null;

        Term eq33 = null;

        ArrayList<Sust> sust34 = null;


        try {
            // FOScheme.g:95:25: ( ( '!' | '\\\\neg' ) n= neg | CAPITALLETTER sust | 'true' sust | 'false' sust | '(' 'forall' LETTER '|' ':' b1= eq ')' sust | '(' 'forall' LETTER '|' ran1= eq ':' b1= eq ')' sust | '(' 'exists' LETTER '|' ':' b2= eq ')' sust | '(' 'exists' LETTER '|' ran2= eq ':' b2= eq ')' sust | WORD '(' arguments ')' sust | '(' eq ')' sust )
            int alt6=10;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // FOScheme.g:97:7: ( '!' | '\\\\neg' ) n= neg
                    {
                    if ( (input.LA(1)>=23 && input.LA(1)<=24) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_neg_in_neg602);
                    n=neg();

                    state._fsp--;

                    value =new App(new Const("\\neg "),n);

                    }
                    break;
                case 2 :
                    // FOScheme.g:99:8: CAPITALLETTER sust
                    {
                    CAPITALLETTER18=(Token)match(input,CAPITALLETTER,FOLLOW_CAPITALLETTER_in_neg628); 
                    pushFollow(FOLLOW_sust_in_neg630);
                    sust19=sust();

                    state._fsp--;

                    Term aux = new Var((new Integer((int)(CAPITALLETTER18!=null?CAPITALLETTER18.getText():null).charAt(0))).intValue());
                                                               for(Iterator<Sust> i = sust19.iterator(); i.hasNext();)
                                                                  aux=new App(aux,i.next()); 
                                                               value =aux;
                                                              

                    }
                    break;
                case 3 :
                    // FOScheme.g:105:8: 'true' sust
                    {
                    match(input,25,FOLLOW_25_in_neg658); 
                    pushFollow(FOLLOW_sust_in_neg660);
                    sust20=sust();

                    state._fsp--;

                    Term aux = new Const("true ");
                                                               for(Iterator<Sust> i = sust20.iterator(); i.hasNext();)
                                                                  aux=new App(aux,i.next()); 
                                                               value =aux;
                                                              

                    }
                    break;
                case 4 :
                    // FOScheme.g:111:8: 'false' sust
                    {
                    match(input,26,FOLLOW_26_in_neg695); 
                    pushFollow(FOLLOW_sust_in_neg697);
                    sust21=sust();

                    state._fsp--;

                    Term aux = new Const("false ");
                                                               for(Iterator<Sust> i = sust21.iterator(); i.hasNext();)
                                                                  aux=new App(aux,i.next()); 
                                                               value =aux;
                                                              

                    }
                    break;
                case 5 :
                    // FOScheme.g:117:8: '(' 'forall' LETTER '|' ':' b1= eq ')' sust
                    {
                    match(input,27,FOLLOW_27_in_neg731); 
                    match(input,28,FOLLOW_28_in_neg733); 
                    LETTER22=(Token)match(input,LETTER,FOLLOW_LETTER_in_neg735); 
                    match(input,29,FOLLOW_29_in_neg737); 
                    match(input,30,FOLLOW_30_in_neg740); 
                    pushFollow(FOLLOW_eq_in_neg744);
                    b1=eq();

                    state._fsp--;

                    match(input,31,FOLLOW_31_in_neg746); 
                    pushFollow(FOLLOW_sust_in_neg748);
                    sust23=sust();

                    state._fsp--;

                    Var v = new Var((int)(LETTER22!=null?LETTER22.getText():null).charAt(0));
                                                                        Term aux =new Bracket(v,b1);
                                                                        for(Iterator<Sust> i = sust23.iterator(); i.hasNext();)
                                                                           aux=new App(aux,i.next()); 
                                                                        value =aux;
                                                                       

                    }
                    break;
                case 6 :
                    // FOScheme.g:124:8: '(' 'forall' LETTER '|' ran1= eq ':' b1= eq ')' sust
                    {
                    match(input,27,FOLLOW_27_in_neg760); 
                    match(input,28,FOLLOW_28_in_neg762); 
                    LETTER24=(Token)match(input,LETTER,FOLLOW_LETTER_in_neg764); 
                    match(input,29,FOLLOW_29_in_neg766); 
                    pushFollow(FOLLOW_eq_in_neg770);
                    ran1=eq();

                    state._fsp--;

                    match(input,30,FOLLOW_30_in_neg772); 
                    pushFollow(FOLLOW_eq_in_neg776);
                    b1=eq();

                    state._fsp--;
